<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <RelativeLayout
            android:id="@+id/main_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/img_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="6dp">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="180dp"
                    android:layout_height="270dp"
                    android:scaleType="centerCrop"
                    android:src="@color/brown_light"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/img_container"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/img_container"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="14sp"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_container"
                android:gravity="start"
                android:text="@string/genre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_genre_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_genre"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/img_container"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="14sp"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_genre_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_container"
                android:gravity="start"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/img_container"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="14sp"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/tv_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_container"
                android:gravity="start"
                android:text="@string/stars"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_stars_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_stars"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/img_container"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="14sp"
                tools:text="@string/stars" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_section">

            <LinearLayout
                android:id="@+id/scene2_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="6dp">

                    <ImageView
                        android:id="@+id/img_scene2"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@color/brown_light"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scene_2"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scene1_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/scene2_container"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="6dp">

                    <ImageView
                        android:id="@+id/img_scene1"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@color/brown_light"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scene_1"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scene3_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/scene2_container"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="6dp">

                    <ImageView
                        android:id="@+id/img_scene3"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@color/brown_light"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scene_3"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/writer"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_section" />

        <TextView
            android:id="@+id/tv_writer_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_writer"
            tools:text="@string/writer" />

        <TextView
            android:id="@+id/tv_sinopsys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/sinopsys"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_writer_content" />

        <TextView
            android:id="@+id/tv_sinopsys_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sinopsys"
            tools:text="@string/sinopsys" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>