<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movies_nav" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/series_nav" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_nav" />

</menu>