<resources>
    <string name="app_name">My Movie Catalog</string>
    <string name="splash_title">Naufal\'s Movie Catalog</string>
    <string name="movies">MOVIES</string>
    <string name="series">TV SERIES</string>
    <string name="language_settings">Settings</string>
    <string name="close_app">Close the App</string>
    <string name="movies_nav">Movies</string>
    <string name="series_nav">Series</string>
    <string name="favorite_nav">Favorite Shows</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_undo_ok">Batalkan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="sinopsys">Synopsis</string>
    <string name="date">Release Date</string>
    <string name="writer">Writer</string>
    <string name="stars">Stars</string>
    <string name="scene_2">Scene 2</string>
    <string name="scene_1">Scene 1</string>
    <string name="scene_3">Scene 3</string>
    <string name="share_text">Segera tonton %s di bioskop terdekat!</string>
    <string name="shareText">Bagikan aplikasi ini sekarang.</string>
    <string name="title_activity_main">MainActivity</string>
</resources>